Overflow and max-width fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,7 @@ p {
 .section-center {
 	width: 90vw;
 	margin: 0 auto;
-	max-width: 1170px;
+	max-width: 1600px;
 }
 @media screen and (min-width: 992px) {
 	.section-center {
@@ -198,7 +198,7 @@ Navbar
 }
 .nav-center {
 	width: 100%;
-	max-width: 1170px;
+	max-width: 1600px;
 	margin: 0 auto;
 }
 .nav-header {
@@ -230,7 +230,7 @@ Navbar
 	}
 	.nav-links {
 		display: grid;
-		grid-template-columns: repeat(4, 1fr);
+		grid-template-columns: repeat(3, 1fr);
 		justify-items: center;
 		-moz-column-gap: 2rem;
 		column-gap: 2rem;
@@ -421,11 +421,16 @@ About
 }
 .about-center {
 	display: grid;
-	gap: 3rem 2rem;
+	gap: 3rem;
+}
+.about-info {
+	text-align: justify;
+	/* display: grid;
+	gap: 2rem; */
 }
 .about-img {
 	justify-self: center;
-	width: 25rem;
+	width: 100%;
 	height: 25rem;
 	/* overflow: hidden; */
 }
